
    - New widgets:
        - Fl::Progress - Typical progress bar
        - Fl::InputChoice - Input widget and menu button rolled into one
        - Fl::Menu - Base class for all widgets that have a menu
        - Fl::MenuButton - Button that pops up a menu when pushed
    - New demo scripts:
        - eg/progress.pl - Demos using a Fl::Progress bar to keep user up to date on background progress

0.99.11 2016-06-04T15:18:01Z

    - New widgets:
        - Fl::Tabs - "File card tabs" interface
        - Fl::Output - Simple display widget for single lines of text
        - Fl::MultilineOutput - Simple display widget for multiple lines of text
    - New demo scripts:
        - eg/tabs.pl - Demonstrates Fl::Tabs
        - eg/scrollbar.pl - Demonstrates Fl::Scrollbar and Fl::Output use

0.99.10 2016-06-04T00:08:58Z

    - New widgets:
        - Fl::Scrollbar - Slider with arrow buttons at either end
        - Fl::Slider - Contains a sliding knob inside a box
        - Fl::FillSlider - Filled Vertical Slider. Useful as a progress or value meter
        - Fl::HorFillSlider - Fl::FillSlider but horizontal
        - Fl::NiceSlider - Fl::Slider with an easy grab handle
        - Fl::HorNiceSlider - Fl::NiceSlider but horizontal
        - Fl::HorSlider - Horizontal Fl::Slider
        - Fl::ValueSlider - Slider widget that displays the current value
        - Fl::HorValueSlider - Horizontal Fl::ValueSlider

0.99.9 2016-05-19T01:11:29Z

    - Fix index count when there are optional arguments in generated code

0.99.8 2016-05-18T18:33:34Z

    - New widgets:
        - Fl::Counter - Controls a single floating point value with button (or keyboard) arrows
        - Fl::SimpleCounter - Fl::Counter with only two buttons
        - Fl::Dial - Circular dial to control a single floating point value
        - Fl::FillDial - Fl::Dial with a filled arc
        - Fl::LineDial - Fl::Dial with a single line to mark the current value